--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
       <h2 class="logo">Travel</h2>
       <div class="toggle"></div>
     </header>
-    <video src="https://traversymedia.com/downloads/videos/explore.mp4" muted loop autoplay></video>
+    <video src="Black_cat_in_green_grass.mp4" muted loop autoplay></video>
     <div class="overlay"></div>
     <div class="text">
-      <h2>Never Stop To </h2> 
+      <h2>Never Stop</h2> 
       <h3>Exploring The World</h3>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
       tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
@@ -39,4 +39,5 @@
     </ul>
   </div>
 </body>
+<script src="app.js"></script>
 </html>
